--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,11 @@
 <resources>
-    <string name="app_name">AppFirebaseREST</string>
+    <string name="app_name">FirebaseApp</string>
     <string name="title_activity_main">MainActivity</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
-    <string name="action_settings">Settings</string>
+    <string name="action_logout">Logout</string>
     <string name="text_login">Por favor, informe seu login</string>
     <string name="hint_e_mail">Email</string>
     <string name="text_senha">Senha</string>
