--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,5 +50,6 @@
         <item>Normal</item>
         <item>Não respira</item>
     </string-array>
+    <string name="title_activity_maps">Map</string>
 
 </resources>
